--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -13,6 +13,10 @@
   padding: 0px;
 }
 
+.skuSelectorOptionsList{
+  justify-content: center;
+}
+
 .newsletter {
   background-color: #03054e;
   max-width: 1528px;
@@ -62,7 +66,11 @@
 }
 
 .skuSelectorContainer {
-  margin: 1rem 0;
+  margin: 0;
+}
+
+.skuSelectorSubcontainer{
+  margin-bottom: 1rem;
 }
 
 @media only screen and (min-width: 640px) {
